section banner and about

--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
         <link href="/styles/reset.css" rel="stylesheet">
         <link href="/styles/general.css" rel="stylesheet">
         <link href="/styles/header.css" rel="stylesheet">
+        <link href="/styles/banner.css" rel="stylesheet">
+        <link href="/styles/about.css" rel="stylesheet">
+
     </head>
 
     <body>
         <!--  HEADER SECTION -->
         <header>
             <div class="top-bar">
-                    <ul class="social-media">
-                        <li><a href="#"><img src="/imagens/facebook.svg" alt="facebook"></a></li>
-                        <li><a href="#"><img src="/imagens/instagram.svg" alt="instagram"></a></li>
-                        <li><a href="#"><img src="/imagens/whatsapp.svg" alt="whatsapp"></a></li>
-                    </ul>
+                <ul class="social-media">
+                    <li><a href="#"><img src="/imagens/facebook.svg"
+                                alt="facebook"></a></li>
+                    <li><a href="#"><img src="/imagens/instagram.svg"
+                                alt="instagram"></a></li>
+                    <li><a href="#"><img src="/imagens/whatsapp.svg"
+                                alt="whatsapp"></a></li>
+                </ul>
 
             </div>
             <div class="container">
@@ -34,11 +40,58 @@
                         <li><a href="#">Mídia</a></li>
                     </ul>
                 </nav>
-                <div class="contact-button">
+                <div class="header-button standard-button">
                     <button>Contato</button>
                 </div>
             </div>
         </header>
+
+        <!--  BANNER SECTION -->
+        <section class="banner">
+            <div class="banner__content">
+                <h1 class="title">We Make a Difference</h1>
+                <h2 class="subtitle">Consulting Agency For Every Business</h2>
+                <br>
+                <p class="paragraph">We design an elegant set of WordPress
+                    Themes & Plugins
+                    that help you create the website you always wanted!</p>
+                <br>
+                <button class="banner-button standard-button">Fale Conosco</button>
+            </div>
+        </section>
+
+        <!--  ABOUT US SECTION -->
+        <section class="about">
+            <div class="about__content">
+                <h2 class="about-title title">Sobre nós</h2>
+                <h3 class="subtitle">Consulting Agency For Every Business</h3>
+                <p class="about-paragraph paragraph">Criada em 2005, a Casa de Repouso Residencial Recanto dos
+                    Nobres
+                    é um espaço destinado ao idoso na qual apresenta um serviço
+                    diferenciado. Foi criada, é administrada e tem como grande
+                    parte
+                    de seus profissionais, pessoas da mesma família, criando
+                    assim
+                    um ambiente aconchegante e agradável fazendo com que cada
+                    morador se sinta como parte desta família.
+
+                    Além de possuir um espaço bem estruturado que proporciona a
+                    cada
+                    morador conforto, segurança, saúde e bem estar, conta com
+                    profissionais de diversas especialidades tais como: Médico,
+                    Enfermeiro, Farmacêutico,Técnicas de Enfermagem,
+                    Nutricionista,
+                    Fisioterapeuta, Psicóloga e Cuidadores Treinados.
+                    Hoje a Casa de Repouso Residencial Recanto dos Nobres conta
+                    com
+                    duas unidades na Zona Leste de São Paulo: Unidade Vila
+                    Esperança
+                    – Penha e Unidade Jardim Anália Franco – Tatuapé.</p>
+            </div>
+            <div class="about__image">
+                <img src="./imagens/img-about.png" alt="figura ilustrativa">
+            </div>
+        </section>
 
     </body>
 
