--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
         <header>
             <nav class="nav-bar">
                 <div class="logotipo">
-                    <h1> <img src="/imagens/logotipo.png" alt="Logotipo"></h1>
+                    <a href="index.html"> <img src="/imagens/logotipo.png" alt="Logotipo"></a>
                 </div>
                 <div class="nav-list">
                     <ul>
-                        <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">
+                        <li class="nav-item"><a href="index.html"
+                                class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="sobre.html"
+                                class="nav-link">Sobre</a></li>
+                        <li class="nav-item"><a href="servicos.html"
+                                class="nav-link">
                                 Serviços</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link"> Fotos</a></li>
+                        <li class="nav-item"><a href="fotos.html"
+                                class="nav-link"> Fotos</a></li>
                     </ul>
                 </div>
                 <div class="login-button">
@@ -55,10 +59,13 @@
             </nav>
             <div class="mobile-menu">
                 <ul>
-                    <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"> Serviços</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"> Fotos</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="sobre.html"
+                            class="nav-link">Sobre</a></li>
+                    <li class="nav-item"><a href="servicos.html"
+                            class="nav-link"> Serviços</a></li>
+                    <li class="nav-item"><a href="fotos.html" class="nav-link">
+                            Fotos</a></li>
                 </ul>
 
                 <div class="login-button">
@@ -70,6 +77,7 @@
         <!--  BANNER SECTION -->
         <section class="banner" id="banner">
             <img src="./imagens/img-banner.png" alt class="banner__image">
+            <img src="./imagens/img-banner-mobile.png" alt class="banner__image__mobile">
             <div class="banner__content">
                 <h1 class="title">Renove sua Qualidade de Vida</h1>
                 <h2 class="subtitle">Sua Casa para uma Vida Melhor</h2>
@@ -78,7 +86,9 @@
                     perfeito para você. Estamos assegurando um espaço alegre e
                     agradável para todos os nossos visitantes.</p>
                 <br>
-                <button class="banner-button standard-button">Fale Conosco</button>
+                <button class="banner-button standard-button">
+                    WhatsApp</button>
+                <!-- TODO: incluir telefone redirect whatsapp -->
             </div>
         </section>
 
@@ -105,7 +115,7 @@
                         cada morador se sinta como parte desta família. </p><br>
                     <p class="about-paragraph paragraph">
 
-                        Além de possuir um espaço bem estruturado que
+                        Além de possuir um espaço bem Serviçosdo que
                         proporciona a cada morador conforto, segurança, saúde e
                         bem estar, conta
                         com profissionais de diversas especialidades tais como:
@@ -123,153 +133,6 @@
                     <img src="./imagens/img-about.png" alt="figura ilustrativa">
                 </div>
 
-            </div>
-        </section>
-
-        <!-- SERVICES SECTION -->
-        <section class="service">
-            <div class="divider"></div>
-
-            <div class="section-tittle">
-                <h2 class="service__title title">Nossos serviços</h2>
-                <h3 class="service__subtitle paragraph">Somos excelência no
-                    atendimento.</h3>
-            </div>
-
-            <div class="container">
-                <!-- Slider main container -->
-                <div class="swiper mySwiper">
-                    <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper">
-                        <!-- Slides -->
-                        <div class="swiper-slide">
-                            <div class="card-swipper">
-                                <div class="card-image">
-                                    <img src="./imagens/cachorro.jpeg"
-                                        alt="Imagem do Cartão">
-                                </div>
-                                <div class="card-content">
-                                    <h1 class="card-title">Este é o titulo 1</h1>
-                                    <span class="card-description">Lorem ipsum
-                                        dolor
-                                        sit amet, consectetur adipiscing elit.
-                                        Etiam
-                                        a fringilla neque. Nulla facilisi.
-                                        Curabitur
-                                        luctus, risus sed lobortis consequat,
-                                        lorem
-                                        dui vulputate quam, dignissim lacinia
-                                        velit
-                                        odio quis erat.</span>
-                                    <button class="card-btn">Clique aqui</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="card-swipper">
-                                <div class="card-image">
-                                    <img src="./imagens/cachorro.jpeg"
-                                        alt="Imagem do Cartão">
-                                </div>
-                                <div class="card-content">
-                                    <h1 class="card-title">Este é o titulo 1</h1>
-                                    <span class="card-description">Lorem ipsum
-                                        dolor
-                                        sit amet, consectetur adipiscing elit.
-                                        Etiam
-                                        a fringilla neque. Nulla facilisi.
-                                        Curabitur
-                                        luctus, risus sed lobortis consequat,
-                                        lorem
-                                        dui vulputate quam, dignissim lacinia
-                                        velit
-                                        odio quis erat.</span>
-                                    <button class="card-btn">Clique aqui</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="card-swipper">
-                                <div class="card-image">
-                                    <img src="./imagens/cachorro.jpeg"
-                                        alt="Imagem do Cartão">
-                                </div>
-                                <div class="card-content">
-                                    <h1 class="card-title">Este é o titulo 1</h1>
-                                    <span class="card-description">Lorem ipsum
-                                        dolor
-                                        sit amet, consectetur adipiscing elit.
-                                        Etiam
-                                        a fringilla neque. Nulla facilisi.
-                                        Curabitur
-                                        luctus, risus sed lobortis consequat,
-                                        lorem
-                                        dui vulputate quam, dignissim lacinia
-                                        velit
-                                        odio quis erat.</span>
-                                    <button class="card-btn">Clique aqui</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="card-swipper">
-                                <div class="card-image">
-                                    <img src="./imagens/cachorro.jpeg"
-                                        alt="Imagem do Cartão">
-                                </div>
-                                <div class="card-content">
-                                    <h1 class="card-title">Este é o titulo 1</h1>
-                                    <span class="card-description">Lorem ipsum
-                                        dolor
-                                        sit amet, consectetur adipiscing elit.
-                                        Etiam
-                                        a fringilla neque. Nulla facilisi.
-                                        Curabitur
-                                        luctus, risus sed lobortis consequat,
-                                        lorem
-                                        dui vulputate quam, dignissim lacinia
-                                        velit
-                                        odio quis erat.</span>
-                                    <button class="card-btn">Clique aqui</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="card-swipper">
-                                <div class="card-image">
-                                    <img src="./imagens/cachorro.jpeg"
-                                        alt="Imagem do Cartão">
-                                </div>
-                                <div class="card-content">
-                                    <h1 class="card-title">Este é o titulo 1</h1>
-                                    <span class="card-description">Lorem ipsum
-                                        dolor
-                                        sit amet, consectetur adipiscing elit.
-                                        Etiam
-                                        a fringilla neque. Nulla facilisi.
-                                        Curabitur
-                                        luctus, risus sed lobortis consequat,
-                                        lorem
-                                        dui vulputate quam, dignissim lacinia
-                                        velit
-                                        odio quis erat.</span>
-                                    <button class="card-btn">Clique aqui</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- If we need pagination -->
-                    <div class="swiper-pagination"></div>
-
-                    <!-- If we need navigation buttons -->
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-
-                </div>
             </div>
         </section>
 
@@ -354,16 +217,17 @@
 
         <!--  CTA SECTION -->
         <section class="cta" id="cta">
-            <div class="cta__content">
-                <span>Descubra um lar acolhedor e carinhoso para seus entes
-                    queridos
-                </span>
-                <p> Nossa equipe dedicada está pronta para oferecer conforto, segurança e apoio 24 horas por dia. Faça a escolha certa hoje ligando para o nosso número e agendando uma visita.
+            <p class="cta__paragraph paragraph">Nosso suporte está
+                disponível de segunda a sexta-feira.
                 </p>
 
-                <button class="cta-button white-button">Ligar agora</button>
+            <br>
+            <p class="cta__paragraph paragraph">Clique no botão
+                abaixo para ver a
+                nossa localização no Google Maps e traçar o melhor caminho
+                até nós.</p>
 
-            </div>
+            <button class="cta-button white-button">Abrir no Google Maps</button>
         </section>
 
         <!--  FOOTER SECTION -->
