Footer, imagens, SEO
Reconstrução do Footer
Substituição de imagens
Adequação HTML para SEO
Correções CSS

--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="pt_BR" />
+        <!-- META TAGS -->
+
+        <meta name="description"
+            content="Oferecemos cuidados amorosos e especializados para idosos em um ambiente acolhedor e seguro. Nossa casa de repouso proporciona conforto, atividades enriquecedoras e uma equipe dedicada para garantir uma vida saudável e feliz na terceira idade." />
+        <meta name="keywords"
+            content="Casa de Repouso, Lar para Idosos, Residência Geriátrica, Moradia para Idosos, Instituição de Longa Permanência para Idosos (ILPI), Cuidados para Idosos, Hospedagem para Idosos, Asilo para Idosos, Moradia Assistida, Cuidados Geriátricos, Vida Assistida, Cuidados de Enfermagem para Idosos, Ambiente de Cuidado para Idosos, Casa de Repouso com Atividades, Alojamento para Terceira Idade, Instalações para Idosos, Melhor Casa de Repouso, Conforto para Idosos, Assistência Residencial para Idosos, Serviços de Cuidados Geriátricos" />
+        <meta property="og:title"
+            content="Casa de Repouso na Zona Leste - Recanto dos Nobres: Cuidado e Hospedagem para Idosos" />
+        <meta property="og:description"
+            content="No Recanto dos Nobres, nossa missão é proporcionar cuidado humanizado e atencioso aos idosos. Abandonamos o antigo conceito de asilo, focando no bem-estar e qualidade de vida de nossos residentes." />
+        <meta property="og:url"
+            content="https://www.recantodosnobrespenha.com.br/" />
+        <meta property="og:site_name"
+            content="Casa de Repouso, Lar Para Idosos, Hospedagem para Idosos" />
+        <meta name="author" content="Caroline Santos">
+
         <title>Casa de Repouso Zona Leste, Hospedagem de idosos - Recanto dos
             Nobres</title>
+
+        <!-- ESTILOS  -->
+        <link rel="canonical" href="https://www.recantodosnobrespenha.com.br">
         <link href="/styles/reset.css" rel="stylesheet">
         <link href="/styles/general.css" rel="stylesheet">
         <link href="/styles/header.css" rel="stylesheet">
@@ -31,9 +51,11 @@
     <body>
         <!--  HEADER SECTION -->
         <header>
+            <div class="top-bar"></div>
             <nav class="nav-bar">
                 <div class="logotipo">
-                    <a href="index.html"> <img src="/imagens/logotipo.png" alt="Logotipo"></a>
+                    <a href="index.html"> <img src="/imagens/logotipo.png"
+                            alt="Logotipo recanto dos nobres"></a>
                 </div>
                 <div class="nav-list">
                     <ul>
@@ -54,7 +76,7 @@
 
                 <div class="mobile-menu-icon">
                     <button onclick="showMenu()"><img class="icon"
-                            src="./imagens/menu.svg" alt></button>
+                            src="./imagens/menu.svg" alt="icone menu hamburger"></button>
                 </div>
             </nav>
             <div class="mobile-menu">
@@ -76,8 +98,9 @@
 
         <!--  BANNER SECTION -->
         <section class="banner" id="banner">
-            <img src="./imagens/img-banner.png" alt class="banner__image">
-            <img src="./imagens/img-banner-mobile.png" alt class="banner__image__mobile">
+            <img src="./imagens/img-banner.png" alt="Casal idoso feliz interage" class="banner__image">
+            <img src="./imagens/img-banner-mobile.png" alt="Casal idoso feliz interage"
+                class="banner__image__mobile">
             <div class="banner__content">
                 <h1 class="title">Renove sua Qualidade de Vida</h1>
                 <h2 class="subtitle">Sua Casa para uma Vida Melhor</h2>
@@ -87,15 +110,15 @@
                     agradável para todos os nossos visitantes.</p>
                 <br>
                 <button class="banner-button standard-button">
-                    WhatsApp</button>
+                    📞 WhatsApp</button>
                 <!-- TODO: incluir telefone redirect whatsapp -->
             </div>
         </section>
 
         <!--  ABOUT US SECTION -->
         <section class="about" id="about">
-            <img src="./imagens/ornament.svg" alt class="about__bg_left">
-            <img src="./imagens/ornament.svg" alt class="about__bg_right">
+            <img src="./imagens/ornament.svg" alt="imagem de fundo" class="about__bg_left">
+            <img src="./imagens/ornament.svg" alt="imagem de fundo" class="about__bg_right">
             <div class="about__container">
                 <div class="about__content">
                     <h2 class="about__title title">Sobre nós</h2>
@@ -130,7 +153,7 @@
                         Tatuapé.</p>
                 </div>
                 <div class="about__image">
-                    <img src="./imagens/img-about.png" alt="figura ilustrativa">
+                    <img src="./imagens/img-about.png" alt="Enfermeira e idosa abraçadas">
                 </div>
 
             </div>
@@ -146,7 +169,7 @@
 
             <div class="testimonial__card__container">
                 <div class="testimonial__card">
-                    <img src="./imagens/aspas.svg" alt>
+                    <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
                         <span>
                             Casa de repouso tem dado a minha sogra, que já
@@ -159,7 +182,7 @@
                 </div>
 
                 <div class="testimonial__card">
-                    <img src="./imagens/aspas.svg" alt>
+                    <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
                         <span>The experts easily identified the
                             wand guided us through the
@@ -170,7 +193,7 @@
                 </div>
 
                 <div class="testimonial__card">
-                    <img src="./imagens/aspas.svg" alt>
+                    <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
                         <span>The experts easily identified the
                             wand guided us through the
@@ -181,7 +204,7 @@
                 </div>
 
                 <div class="testimonial__card">
-                    <img src="./imagens/aspas.svg" alt>
+                    <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
                         <span>The experts easily identified the
                             wand guided us through the
@@ -192,7 +215,7 @@
                 </div>
 
                 <div class="testimonial__card">
-                    <img src="./imagens/aspas.svg" alt>
+                    <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
                         <span>The experts easily identified the
                             wand guided us through the
@@ -203,7 +226,7 @@
                 </div>
 
                 <div class="testimonial__card">
-                    <img src="./imagens/aspas.svg" alt>
+                    <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
                         <span>The experts easily identified the
                             wand guided us through the
@@ -218,8 +241,8 @@
         <!--  CTA SECTION -->
         <section class="cta" id="cta">
             <p class="cta__paragraph paragraph">Nosso suporte está
-                disponível de segunda a sexta-feira.
-                </p>
+                disponível de Segunda a Sábado das 8:00 - 18.00.
+            </p>
 
             <br>
             <p class="cta__paragraph paragraph">Clique no botão
@@ -227,51 +250,53 @@
                 nossa localização no Google Maps e traçar o melhor caminho
                 até nós.</p>
 
-            <button class="cta-button white-button">Abrir no Google Maps</button>
+            <button class="cta-button white-button">Ver no Google Maps</button>
         </section>
 
         <!--  FOOTER SECTION -->
-        <section class="footer" id="footer">
-            <footer>
-                <div class="footer">
-                    <div class="footer__column__left">
-                        <ul class="footer__links">
-                            <li class="link"><a href="#">Home</a> </li>
-                            <li class="link"><a href="#">Quem Somos</a></li>
-                            <li class="link"><a href="#">Serviços</a></li>
-                            <li class="link"><a href="#">Estadia</a></li>
-                            <li class="link"><a href="#">Mídia</a></li>
-                            <li class="link"><a href="#">Mapa do Site</a></li>
-                        </ul>
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__column__left">
+                    <ul class="footer__links">
+                        <li class="link"><a href="#">Inicio</a> </li>
+                        <li class="link"><a href="#">Sobre</a></li>
+                        <li class="link"><a href="#">Serviços</a></li>
+                        <li class="link"><a href="#">Fotos</a></li>
+                    </ul>
 
-                        <div class="location">
-                            <h4>Localização</h4>
-                            <a
-                                href="https://goo.gl/maps/D6SQHTbuubDb1Rk39">
-                                <p>Rua Oiti, 319 - Vila Rejente Feijó</p>
-                                <p>São Paulo/SP - CEP 03347-000</p>
-                                <p>Próximo ao Shopping Anália Franco</p>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="footer__column__right">
-                        <ul>
-                            <li>Casa de repouso na vila carrão</li>
-                            <li>Casa de repouso mooca</li>
-                            <li>Casa de repouso vila formosa</li>
-                            <li>Melhores casas de repouso SP</li>
-                        </ul>
+                    <div class="location">
+                        <h4>Localização</h4>
+                        <a
+                            href="https://goo.gl/maps/D6SQHTbuubDb1Rk39">
+                            <p>Rua Oiti, 319 - Vila Rejente Feijó</p>
+                            <p>São Paulo/SP - CEP 03347-000</p>
+                            <p>Próximo ao Shopping Anália Franco</p>
+                        </a>
                     </div>
                 </div>
 
-                <div class="footer__copyright">
-                    <p>Copyright Casa de Repouso Recanto dos Nobres.
-                        Todos os
-                        direitos reservados.</p>
+                <div class="footer__column__right">
+                    <ul>
+                        <li>Casa de repouso na vila carrão</li>
+                        <li>Casa de repouso mooca</li>
+                        <li>Casa de repouso vila formosa</li>
+                        <li>Melhores casas de repouso SP</li>
+                        <li>Instituição de Longa Permanência para Idosos (ILPI)</li>
+                        <li>Moradia Assistida</li>
+                        <li>Instalações para Idosos</li>
+                        <li>Assistência Residencial para Idosos</li>
+                    </ul>
                 </div>
-            </footer>
-        </section>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="copyright">
+                <span>© Recanto dos Nobres 2023. Todos os direitos reservados.
+                </span>
+            </div>
+
+        </footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
