--- a/sobre.html
+++ b/sobre.html
@@ -20,9 +20,10 @@
     <body>
 
         <header>
+            <div class="top-bar"></div>
             <nav class="nav-bar">
                 <div class="logotipo">
-                    <a href="index.html"><img src="/imagens/logotipo.png" alt="Logotipo"></a>
+                    <a href="index.html"><img src="/imagens/logotipo.png" alt="Logotipo recanto dos nobres"></a>
                 </div>
                 <div class="nav-list">
                     <ul>
@@ -43,7 +44,7 @@
 
                 <div class="mobile-menu-icon">
                     <button onclick="showMenu()"><img class="icon"
-                            src="./imagens/menu.svg" alt></button>
+                            src="./imagens/menu.svg" alt="menu hamburger"></button>
                 </div>
             </nav>
             <div class="mobile-menu">
@@ -105,7 +106,51 @@
             </div>
         </section>
 
-        <!-- TODO: incluir footer -->
+        <!--  FOOTER SECTION -->
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__column__left">
+                    <ul class="footer__links">
+                        <li class="link"><a href="#">Inicio</a> </li>
+                        <li class="link"><a href="#">Sobre</a></li>
+                        <li class="link"><a href="#">Serviços</a></li>
+                        <li class="link"><a href="#">Fotos</a></li>
+                    </ul>
+
+                    <div class="location">
+                        <h4>Localização</h4>
+                        <a
+                            href="https://goo.gl/maps/D6SQHTbuubDb1Rk39">
+                            <p>Rua Oiti, 319 - Vila Rejente Feijó</p>
+                            <p>São Paulo/SP - CEP 03347-000</p>
+                            <p>Próximo ao Shopping Anália Franco</p>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="footer__column__right">
+                    <ul>
+                        <li>Casa de repouso na vila carrão</li>
+                        <li>Casa de repouso mooca</li>
+                        <li>Casa de repouso vila formosa</li>
+                        <li>Melhores casas de repouso SP</li>
+                        <li>Instituição de Longa Permanência para Idosos (ILPI)</li>
+                        <li>Moradia Assistida</li>
+                        <li>Instalações para Idosos</li>
+                        <li>Assistência Residencial para Idosos</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="copyright">
+                <span>© Recanto dos Nobres 2023. Todos os direitos reservados.
+                </span>
+            </div>
+
+        </footer>
+
 
         <!-- GENERAL SCRIPT -->
         <script src="js/script.js"></script>
